--- a/V2Client/Podfile
+++ b/V2Client/Podfile
@@ -14,4 +14,6 @@ pod 'Masonry', '~>1.1.0'
 pod 'MMDrawerController', '~> 0.5.7'
 pod 'KVOController'
 pod 'TFHpple'
+pod 'HBDNavigationBar', '~> 1.5.0'
+pod 'SVProgressHUD'
 end
